--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -60,14 +60,13 @@
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_marginHorizontal="4dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:backgroundTint="@color/black"
+                    android:background="@drawable/ripple_secondary"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_cross"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/login_tint" />
+                    app:tint="@color/secondary_text_tint" />
 
                 <View
                     android:layout_width="2dp"
@@ -81,8 +80,7 @@
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_marginHorizontal="4dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:backgroundTint="@color/black"
+                    android:background="@drawable/ripple_primary"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_check"
                     app:layout_constraintBottom_toBottomOf="parent"
