--- a/app/src/main/res/layout/list_ingredients_edit.xml
+++ b/app/src/main/res/layout/list_ingredients_edit.xml
@@ -57,6 +57,7 @@
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="36dp"
                 android:layout_height="48dp"
+                android:focusable="false"
                 android:paddingStart="4dp"
                 android:paddingEnd="0dp"
                 android:src="@drawable/ic_cross" />
