--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,19 +6,13 @@
         <item name="colorPrimaryVariant">@color/deep_orange_dark</item>
         <item name="colorAccent">@color/deep_orange_light</item>
         <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/app_background</item>
-        <!-- Customize your theme here. -->
+        <!-- Background -->
         <item name="android:windowBackground">@color/app_background</item>
         <item name="android:navigationBarColor" tools:targetApi="p">@color/app_background</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="p">true</item>
         <item name="fontFamily">@font/montserrat</item>
-
-        <item name="android:windowActivityTransitions">true</item>
     </style>
 
 </resources>
