--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,6 +12,7 @@
     <color name="ic_launcher_background">@color/white</color>
     <color name="app_background">#121212</color>
     <color name="input_background">#1F1F1F</color>
+    <color name="hint_background">#404040</color>
     <color name="secondary_text_tint">#bebebe</color>
     <color name="navigation_background">#202020</color>
     <color name="navigation_foreground">#BFBFBF</color>
