--- a/app/src/main/res/layout/list_steps.xml
+++ b/app/src/main/res/layout/list_steps.xml
@@ -29,7 +29,7 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:layout_marginEnd="8dp"
-                android:gravity="end"
+                android:gravity="start"
                 android:text="@string/step_number"
                 android:textColor="@color/deep_orange_light"
                 android:textSize="24sp" />
