--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="input_background">#F2F2F2</color>
     <color name="hint_background">#bfbfbf</color>
     <color name="secondary_text_tint">#3F3F3F</color>
-    <color name="navigation_background">#FAFAFA</color>
+    <color name="navigation_background">#F7F7F7</color>
     <color name="navigation_foreground">#666666</color>
     <color name="time_popular">#f2f2f2</color>
     <color name="recipe_card_background">#F7F7F7</color>
