Recipe class refactoring

--- a/app/src/main/res/layout/activity_commit_recipe.xml
+++ b/app/src/main/res/layout/activity_commit_recipe.xml
@@ -245,7 +245,7 @@
                     android:layout_weight="1">
 
                     <Button
-                        android:id="@+id/btn_add_section"
+                        android:id="@+id/btn_add_ingredient_section"
                         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -279,17 +279,59 @@
                 tools:itemCount="1"
                 tools:listitem="@layout/list_steps_edit" />
 
-            <Button
-                android:id="@+id/btn_add_step"
-                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:text="@string/step"
-                android:textColor="@color/deep_orange_light"
-                app:icon="@drawable/ic_add"
-                app:iconTint="@color/deep_orange_light" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btn_add_step"
+                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:text="@string/step"
+                        android:textColor="@color/deep_orange_light"
+                        app:icon="@drawable/ic_add"
+                        app:iconTint="@color/deep_orange_light"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btn_add_cooking_section"
+                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/section"
+                        android:textColor="@color/deep_orange_light"
+                        app:icon="@drawable/ic_add"
+                        app:iconTint="@color/deep_orange_light"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
