--- a/app/src/main/res/layout/list_ingredients.xml
+++ b/app/src/main/res/layout/list_ingredients.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="ingredient"
-            type="com.cactusknights.chefbook.models.Ingredient" />
+            type="com.cactusknights.chefbook.models.Selectable&lt;String>" />
     </data>
 
     <LinearLayout
@@ -28,7 +28,7 @@
             android:layout_marginEnd="8dp"
             android:button="@drawable/selector_checkbox"
             android:src="@drawable/ic_add"
-            android:visibility="@{ingredient.isSection? View.GONE:View.VISIBLE}"
+            android:visibility="@{ingredient.isSelected? View.GONE:View.VISIBLE}"
             app:tint="@color/deep_orange_light" />
 
         <TextView
@@ -37,9 +37,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/comfortaa_bold"
-            android:text="@{ingredient.name}"
+            android:text="@{ingredient.item}"
             android:textSize="24sp"
-            app:isSection="@{ingredient.isSection}" />
+            app:isSection="@{ingredient.isSelected}" />
 
     </LinearLayout>
 
